# ledSPI

./: .gitignore  CMakeLists.txt  DMX Timing  LEDScapeConfig.sh  Makefile  README.md  apa102-config.json  bbb-network-setup  dmx_0.p  fade-test.c  install-service.sh  install_RevC  interfaces  ledscape-server  ledscape.c  ledscape.h  ledscape.service  ledscape.service.in  ledscapeSetup.sh  ledspi-server.c  ledspi-service.in  ledspi.service.in  nop_0.p  nop_1.p  opc-rx  opc-rx.c  opc-server.c  pinmap.js  pru.c  pru.h  red-test.c  rgb-test.c  run-ledscape  run-ledscape.sh  run-ledspi  spio.c  spio.h  uEnv.txt  udp-rx.c  uninstall-service.sh  (+11 more)
am335x/pasm/: Makefile
dts/: patch_dts.sh
lib/cesanta/: frozen.c  frozen.h  mongoose.c
processing/grid16x16_clouds/: grid16x16_clouds.pde
processing/grid32x16_clouds/: grid32x16_clouds.pde
processing/grid32x16z_attractor/: grid32x16z_attractor.pde
processing/grid32x48_clouds/: grid32x48_clouds.pde
processing/grid32x48z_attractor/: grid32x48z_attractor.pde
processing/grid32x48z_dot/: grid32x48z_dot.pde
processing/grid32x48z_particle_fft/: grid32x48z_particle_fft.pde
processing/grid32x48z_red/: grid32x48z_red.pde
processing/grid32x48z_rings_leapmotion/: grid32x48z_rings_leapmotion.pde
processing/grid32x48z_wavefronts/: grid32x48z_wavefronts.pde
processing/grid48x48_ScreenCapture/: grid48x48_ScreenCapture.pde
processing/grid48x48_clouds/: grid48x48_clouds.pde
processing/grid48x48z_attractor/: Particle.pde  grid48x48z_attractor.pde
pru/: build_all_templates.sh  build_template.sh  pinmap.js
(+25 files in other folders)
